--- a/index.html
+++ b/index.html
@@ -50,25 +50,30 @@
             <div class="time">
               <p>12:00</p>
               <p>ОДО</p>
-              <p style="letter-spacing: 0em; font-size: 18px; font-weight: 700;">ул. Шостаковича 7</p>
+              <p style="letter-spacing: 0em; font-size: 18px; font-weight: 700">
+                ул. Шостаковича 7
+              </p>
             </div>
           </div>
           <div class="countdown">
             <p class="time-left">До начала шоу осталось:</p>
             <div class="days">
               <div class="flex-time">
-                <h2 id="d"></h2><p class="count">дней</p>
+                <h2 id="d"></h2>
+                <p class="count">дней</p>
               </div>
               <div class="flex-time">
-                <h2 id="h"></h2><p class="count">часов</p>
+                <h2 id="h"></h2>
+                <p class="count">часов</p>
               </div>
               <div class="flex-time">
-                <h2 id="m"></h2><p class="count">минут</p>
+                <h2 id="m"></h2>
+                <p class="count">минут</p>
               </div>
               <div class="flex-time">
-                <h2 id="s"></h2><p class="count">секунд</p>
+                <h2 id="s"></h2>
+                <p class="count">секунд</p>
               </div>
-              
             </div>
           </div>
         </div>
@@ -171,37 +176,40 @@
           </p>
           <div class="artists__carousel">
             <div class="artist">
-              <img
+              <img class="artist__img"
                 src="./images/carousel/Анастасия_Ермакова.png"
-                style="width: 100%"
               />
-              <p class="artist__name">Анастасия Ермакова</p>
-              <p class="artist__text">
-                Член сборной России по дисциплине фристайл-слалом, многократный
-                призер Чемпионатов России по роллер спорту
-              </p>
+              <div class="artist__description">
+                <p class="artist__name">Анастасия Ермакова</p>
+                <p class="artist__text">
+                  Член сборной России по дисциплине фристайл-слалом,
+                  многократный призер Чемпионатов России по роллер спорту
+                </p>
+              </div>
             </div>
             <div class="artist">
               <img
                 src="./images/carousel/Валерия_Власова.png"
-                style="width: 100%"
               />
-              <p class="artist__name">Валерия Власова</p>
-              <p class="artist__text">
-                Двукратная чемпионка мира по воздушной гимнастике, многократная
-                победительница Всероссийских соревнований
-              </p>
+              <div class="artist__description">
+                <p class="artist__name">Валерия Власова</p>
+                <p class="artist__text">
+                  Двукратная чемпионка мира по воздушной гимнастике,
+                  многократная победительница Всероссийских соревнований
+                </p>
+              </div>
             </div>
             <div class="artist">
               <img
                 src="./images/carousel/Регина_Кудряшкина.png"
-                style="width: 100%"
               />
-              <p class="artist__name">Регина Кудряшкина</p>
-              <p class="artist__text">
-                Мастер спорта по художественной гимнастике, многократный призёр
-                международных соревнований
-              </p>
+              <div class="artist__description">
+                <p class="artist__name">Регина Кудряшкина</p>
+                <p class="artist__text">
+                  Мастер спорта по художественной гимнастике, многократный
+                  призёр международных соревнований
+                </p>
+              </div>
             </div>
           </div>
         </section>
@@ -389,7 +397,6 @@
             />
           </div>
           <button class="buy-ticket">Выбрать билет</button>
-
         </section>
       </div>
       <footer class="footer">
