добавлена прокрутка страницы и закрытие модального окна

--- a/index.html
+++ b/index.html
@@ -39,88 +39,89 @@
           />
         </div>
       </section>
-
-      <section class="calendar" id="calendar">
-        <div class="calendar__content">
-          <div class="show-time">
-            <div class="date">
-              <h2>24</h2>
-              <h3>декабря</h3>
-            </div>
-            <div class="time">
-              <p>12:00</p>
-              <p>ОДО</p>
-              <p style="letter-spacing: 0em; font-size: 18px; font-weight: 700">
-                ул. Шостаковича 7
-              </p>
-            </div>
-          </div>
-          <div class="countdown">
-            <p class="time-left">До начала шоу осталось:</p>
-            <div class="days">
-              <div class="flex-time">
-                <h2 id="d"></h2>
-                <p class="count">дней</p>
-              </div>
-              <div class="flex-time">
-                <h2 id="h"></h2>
-                <p class="count">часов</p>
-              </div>
-              <div class="flex-time">
-                <h2 id="m"></h2>
-                <p class="count">минут</p>
-              </div>
-              <div class="flex-time">
-                <h2 id="s"></h2>
-                <p class="count">секунд</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="buy-tickets__info">
-          <div class="palas">
-            <div class="calendar__logo">
-              <img
-                src="./images/Сны_Клоуна.png"
-                alt="Сны_Клоуна"
-                style="width: 100%"
-              />
-            </div>
-            <div class="adress">
-              <h2>Самара</h2>
-              <h2>Дом Офицеров</h2>
-              <p>ул.&nbsp;Шостаковича&nbsp;7</p>
-            </div>
-          </div>
-          <div class="date-show">
-            <h3 class="day-show">24 Декабря в 12:00</h3>
-            <button class="buy-ticket">Купить билеты</button>
-          </div>
-        </div>
-        <div class="date__prev">
-          <a onclick=""
-            ><img
-              src="./images/ссссс.png"
-              style="transform: rotate(180deg)"
-              alt="стрелка влево"
-          /></a>
-          <div class="date__text">
-            <h3>Вернуться</h3>
-            <h3>назад</h3>
-          </div>
-        </div>
-        <div class="date__next">
-          <div class="date__text">
-            <h3>Другая</h3>
-            <h3>дата</h3>
-          </div>
-          <a onclick=""
-            ><img src="./images/ссссс.png" alt="стрелка вправо"
-          /></a>
-        </div>
-      </section>
-
       <div class="main-content">
+        <section class="calendar" id="calendar">
+          <div class="calendar__content">
+            <div class="show-time">
+              <div class="date">
+                <h2>24</h2>
+                <h3>декабря</h3>
+              </div>
+              <div class="time">
+                <p>12:00</p>
+                <p>ОДО</p>
+                <p
+                  style="letter-spacing: 0em; font-size: 18px; font-weight: 700"
+                >
+                  ул. Шостаковича 7
+                </p>
+              </div>
+            </div>
+            <div class="countdown">
+              <p class="time-left">До начала шоу осталось:</p>
+              <div class="days">
+                <div class="flex-time">
+                  <h2 id="d"></h2>
+                  <p class="count">дней</p>
+                </div>
+                <div class="flex-time">
+                  <h2 id="h"></h2>
+                  <p class="count">часов</p>
+                </div>
+                <div class="flex-time">
+                  <h2 id="m"></h2>
+                  <p class="count">минут</p>
+                </div>
+                <div class="flex-time">
+                  <h2 id="s"></h2>
+                  <p class="count">секунд</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="buy-tickets__info">
+            <div class="palas">
+              <div class="calendar__logo">
+                <img
+                  src="./images/Сны_Клоуна.png"
+                  alt="Сны_Клоуна"
+                  style="width: 100%"
+                />
+              </div>
+              <div class="adress">
+                <h2>Самара</h2>
+                <h2>Дом Офицеров</h2>
+                <p>ул.&nbsp;Шостаковича&nbsp;7</p>
+              </div>
+            </div>
+            <div class="date-show">
+              <h3 class="day-show">24 Декабря в 12:00</h3>
+              <button class="buy-ticket">Купить билеты</button>
+            </div>
+          </div>
+          <div class="date__prev">
+            <a onclick=""
+              ><img
+                src="./images/ссссс.png"
+                style="transform: rotate(180deg)"
+                alt="стрелка влево"
+            /></a>
+            <div class="date__text">
+              <h3>Вернуться</h3>
+              <h3>назад</h3>
+            </div>
+          </div>
+          <div class="date__next">
+            <div class="date__text">
+              <h3>Другая</h3>
+              <h3>дата</h3>
+            </div>
+            <a onclick=""
+              ><img src="./images/ссссс.png" alt="стрелка вправо"
+            /></a>
+          </div>
+        </section>
+
         <section class="videos">
           <div class="video__content">
             <div class="video__description">
@@ -176,7 +177,8 @@
           </p>
           <div class="artists__carousel">
             <div class="artist">
-              <img class="artist__img"
+              <img
+                class="artist__img"
                 src="./images/carousel/Анастасия_Ермакова.png"
               />
               <div class="artist__description">
@@ -188,9 +190,7 @@
               </div>
             </div>
             <div class="artist">
-              <img
-                src="./images/carousel/Валерия_Власова.png"
-              />
+              <img src="./images/carousel/Валерия_Власова.png" />
               <div class="artist__description">
                 <p class="artist__name">Валерия Власова</p>
                 <p class="artist__text">
@@ -200,9 +200,7 @@
               </div>
             </div>
             <div class="artist">
-              <img
-                src="./images/carousel/Регина_Кудряшкина.png"
-              />
+              <img src="./images/carousel/Регина_Кудряшкина.png" />
               <div class="artist__description">
                 <p class="artist__name">Регина Кудряшкина</p>
                 <p class="artist__text">
@@ -218,61 +216,51 @@
             <div class="mySlides fade">
               <img
                 src="./images/gallery/photo_2023-11-10_21-35-19.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
             <div class="mySlides fade">
               <img
                 src="./images/gallery/photo_2023-11-10_21-35-27.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
             <div class="mySlides fade">
               <img
                 src="./images/gallery/photo_2023-11-10_21-35-37.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
             <div class="mySlides fade">
               <img
                 src="./images/gallery/photo_2023-11-10_21-35-40.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
             <div class="mySlides fade">
               <img
                 src="./images/gallery/photo_2023-11-10_21-35-43.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
             <div class="mySlides fade">
               <img
                 src="./images/gallery/photo_2023-11-10_21-35-46.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
             <div class="mySlides fade">
               <img
                 src="./images/gallery/photo_2023-11-10_21-35-48.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
             <div class="mySlides fade">
               <img
                 src="./images/gallery/photo_2023-11-10_21-35-52.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
             <div class="mySlides fade">
               <img
                 src="./images/gallery/photo_2023-11-10_21-35-55.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
             <div class="mySlides fade">
               <img
                 src="./images/gallery/photo_2023-11-11_02-36-07.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
             <div class="mySlides fade">
@@ -281,8 +269,8 @@
                 style="width: 100%; object-fit: cover"
               />
             </div>
-
-            <a class="prev" onclick="plusSlides(-1)"
+          </div>
+          <a class="prev" onclick="plusSlides(-1)"
               ><img
                 src="./images/ссссс.png"
                 style="transform: rotate(180deg)"
@@ -291,7 +279,6 @@
             <a class="next" onclick="plusSlides(1)"
               ><img src="./images/ссссс.png" alt="стрелка вправо"
             /></a>
-          </div>
         </section>
         <section class="music">
           <p class="music__text">
@@ -345,10 +332,8 @@
             </div>
           </div>
         </section>
-
         <section class="questions">
           <h2 class="rewiews__title">Вопросы и ответы</h2>
-
           <div class="questions__box">
             <div class="accordion__block">
               <button class="accordion">Сколько длится шоу?</button>
@@ -396,7 +381,7 @@
               style="width: 100%"
             />
           </div>
-          <button class="buy-ticket">Выбрать билет</button>
+          <a href="#calendar" class="buy-ticket">Выбрать билет</a>
         </section>
       </div>
       <footer class="footer">
