--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
       </section>
 
       <!-- Popup image -->
-      <section class="hamburger popup_image">
+      <section class="popup popup_image">
         <figure class="popup__figure">
           <button
             class="popup__close popup__close_image"
